--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,20 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+bin/Fichajes.dll
+bin/Fichajes.pdb
+Fichajes.csproj
+Fichajes.csproj.user
+bin/Fichajes.dll.config
+obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+obj/Debug/Fichajes.csproj.FileListAbsolute.txt
+obj/Debug/Fichajes.csprojResolveAssemblyReference.cache
+obj/Debug/Fichajes.dll
+obj/Debug/Fichajes.pdb
+obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+Properties/AssemblyInfo.cs
+Web.config
+Web.Debug.config
+Web.Release.config
